# SimDE

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  design_notes.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  structure.html
.github/: .licenserc.yaml
.github/Dockerfile/: note.txt
.github/workflows/: add_licenses.yaml  build_base.yaml  build_test_release-manual.yaml  build_test_release.yaml  c-cpp.yaml  deploy_docs.yaml  format.yaml  lint.yaml  merge.yaml  nightly.yaml  pull_request.yaml  test_docs.yaml
_sources/: index.rst.txt  install.rst.txt  structure.rst.txt
_sources/background/: index.rst.txt  motivation.rst.txt
_static/: documentation_options.js
attic/: transformed.cpp
attic/tests/: correlation_energy.cpp  scf_iteration.cpp  update_mos.cpp
background/: index.html  motivation.html  overview.html  statement_of_need.html  terminology.html
cmake/: nwx_python_mods.cmake
developer/: index.html
developer/design/: architecture.html  design_notes.html  index.html
docs/: Makefile  README.md
docs/source/: conf.py  design_notes.rst  index.rst  install.rst  structure.rst
include/property_types/: atomic_charges.hpp  cauchy_schwarz_approximation.hpp  connectivity.hpp  core_hamiltonian.hpp  coulomb_matrix.hpp  df_coefficients.hpp  doubles_residual.hpp  embedding_partition.hpp  energy.hpp  energy_denominator.hpp  exchange_matrix.hpp  fock_matrix.hpp  fragmented.hpp  guess_density.hpp  iteration_improver.hpp  localized_orbitals.hpp  mo_charges.hpp  mp2_density.hpp  pair_energies.hpp  reference_wavefunction.hpp  resolution_of_the_identity_basis_set.hpp  scf_iteration.hpp  sparsity_relation.hpp  topology.hpp  transformed.hpp  types.hpp  update_guess.hpp  update_mos.hpp  xc_quantities.hpp
include/simde/: Z_from_symbol.hpp  atom.hpp  atom_to_ao.hpp  atomic_charges.hpp  atomic_density.hpp  auxiliary_basis_set.hpp  cauchy_schwarz_approximation.hpp  connectivity.hpp  doubles_residual.hpp  elec_configuration.hpp  embedding_partition.hpp  energy_denominator.hpp  exchange_correlation.hpp  fragmented.hpp  integral_factory.hpp  iteration_improver.hpp  mo_charges.hpp  scf_iteration.hpp  simde.hpp  sparsity_relation.hpp  symbol_from_Z.hpp  topology.hpp  types.hpp  util.hpp
property_types/: CMakeLists.txt  aointegral.cpp  aointegral.hpp  atomic_charges.cpp  atomic_charges.hpp  bunchkaufman.cpp  bunchkaufman.hpp  cauchy_schwarz_approximation.cpp  cauchy_schwarz_approximation.hpp  cholesky.cpp  cholesky.hpp  core_hamiltonian.hpp  correlation_energy.cpp  correlation_energy.hpp  coulomb_matrix.cpp  coulomb_matrix.hpp  df_coefficients.cpp  df_coefficients.hpp  differential_overlap_integral.cpp  differential_overlap_integral.hpp  eigen_solver.cpp  embedding_partition.cpp  embedding_partition.hpp  energy.hpp  exchange_matrix.cpp  exchange_matrix.hpp  fock_matrix.cpp  fock_matrix.hpp  guess_density.cpp  guess_density.hpp  j.hpp  k.hpp  linear_solver.cpp  localized_orbitals.cpp  localized_orbitals.hpp  lu.cpp  matrix_inverse.cpp  mo_charges.cpp  mo_charges.hpp  partial_charges.cpp  (+16 more)
property_types/ao_integrals/: cgtg.cpp  cgtg.hpp  doi.cpp  doi.hpp  electron_repulsion.cpp  electron_repulsion.hpp  emultipole.cpp  emultipole.hpp  kinetic.cpp  kinetic.hpp  nuclear.hpp  overlap.cpp  overlap.hpp  stg.hpp  yukawa.cpp  yukawa.hpp
property_types/integrals/: CMakeLists.txt  multipole.cpp  multipole.hpp  overlap.cpp  overlap.hpp
property_types/linear_algebra/: bunchkaufman.cpp  cholesky.cpp  eigen_solver.cpp  eigen_solver.hpp  hermitian_triangular_factorization.hpp  linear_solver.cpp  linear_solver.hpp  lu.cpp  lu.hpp  matrix_inverse.hpp  matrix_properties.hpp  positive_definite_triangular_factorization.hpp  qr.cpp  qr.hpp
property_types_cxx_api/: index.html
simde_cxx_api/: Z__from__symbol_8hpp_source.html  _formulas.tex  annotated.html  ao__dispatch_8hpp_source.html  ao__energy_8hpp_source.html  ao__integrals_8hpp_source.html  ao__tensor__representation_8hpp_source.html  atom_8hpp_source.html  atom__to__ao_8hpp_source.html  atomic__basis__set_8hpp_source.html  atomic__charges_8hpp_source.html  atomic__density_8hpp_source.html  atomic__density__matrix_8hpp_source.html  atomic__orbitals_8hpp_source.html  atoms_8hpp_source.html  auxiliary__basis__set_8hpp_source.html  basis__set_8hpp_source.html  basis__sets_8hpp_source.html  bra__ket_8hpp_source.html  cauchy__schwarz__approximation_8hpp_source.html  chemical__system_8hpp_source.html  classes.html  classsimde_1_1AOTensorRepresentation.html  classsimde_1_1Derivative.html  classsimde_1_1ModeToBasisMap-members.html  classsimde_1_1ModeToBasisMap.html  collocation__matrix_8hpp_source.html  complimentary__auxiliary__basis__set_8hpp_source.html  connectivity_8hpp_source.html  convert_8hpp_source.html  density_8hpp_source.html  density__fit__basis_8hpp_source.html  derivative_8hpp.html  derivative_8hpp__dep__incl.map  derivative_8hpp__dep__incl.md5  derivative_8hpp__incl.map  derivative_8hpp__incl.md5  derivative_8hpp_source.html  derivative__pt_8hpp_source.html  dir_000001_000004.html  (+286 more)
simde_cxx_api/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+35 more)
tests/: CMakeLists.txt  README.md  ao_integrals.cpp  aointegral.cpp  atomic_charges.cpp  bunchkaufman.cpp  cauchy_schwarz_approximation.cpp  cgtg.cpp  cholesky.cpp  complimentary_auxiliary_basis_set.hpp  connectivity.cpp  core_hamiltonian.cpp  coulomb_matrix.cpp  df_coefficients.cpp  differential_overlap_integrals.cpp  eigen_solver.cpp  embedding_partition.cpp  energy.cpp  exchange_matrix.cpp  fock_matrix.cpp  fragmented.cpp  guess_density.cpp  hermitian_triangular_factorization.cpp  iteration_improver.cpp  j.cpp  k.cpp  linear_solver.cpp  localized_orbitals.cpp  lu.cpp  matrix_inverse.cpp  mo_charges.cpp  partial_charges.cpp  positive_definite_triangular_factorization.cpp  qr.cpp  reference_wavefunction.cpp  scf_iteration.cpp  singular_value_decomposition.cpp  test_property_type.hpp  topology.cpp  transformed.cpp  (+4 more)
(+489 files in other folders)
